2.81 Cant open/append/link a blend file but 2.8 can #69663

Closed
opened 2019-09-09 10:21:45 +02:00 by vprime · 18 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.15

Blender Version
Broken: version: 2.81 (sub 8), branch: master, commit date: 2019-09-08 21:40, hash: f3a4f12ac0
Worked: 2.8
Short description of error
same as title ...cmd prompt
shows
Error : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF720FF2EF5
Module : C:\blender2.81\blender.exe

while trying to open

Copy pasting from 2.8 to 2.81 also crashes blender

re-importing the obj in a new 2.81 file works fine...
but don't know the this blend file is giving this issue

The file
just a chair model imported from an obj
tables and chairs47... chair.blend

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.15 **Blender Version** Broken: version: 2.81 (sub 8), branch: master, commit date: 2019-09-08 21:40, hash: `f3a4f12ac0` Worked: 2.8 **Short description of error** same as title ...cmd prompt shows Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF720FF2EF5 Module : C:\blender2.81\blender.exe while trying to open Copy pasting from 2.8 to 2.81 also crashes blender re-importing the obj in a new 2.81 file works fine... but don't know the this blend file is giving this issue **The file** just a chair model imported from an obj [tables and chairs47... chair.blend](https://archive.blender.org/developer/F7726542/tables_and_chairs47..._chair.blend)
Author

Added subscriber: @V-prime

Added subscriber: @V-prime

Added subscriber: @machieb

Added subscriber: @machieb

I have the same problem with the todays build!
I can´t open files I created with a blender version from last week friday. Blender 2.8 can open these files.

I have the same problem with the todays build! I can´t open files I created with a blender version from last week friday. Blender 2.8 can open these files.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, checking... seems another problem with the new mapping node, crashes in versioning code...

1  update_mapping_node_inputs_and_properties versioning_cycles.c 802  0x2b535f5 
2  do_versions_after_linking_cycles          versioning_cycles.c 1096 0x2b54b73 
3  do_versions_after_linking                 readfile.c          9493 0x2b246ab 
4  blo_read_file_internal                    readfile.c          9799 0x2b2549d 
5  BLO_read_from_file                        readblenentry.c     320  0x2b5dfed 
6  BKE_blendfile_read                        blendfile.c         420  0x3e22900 
7  WM_file_read                              wm_files.c          631  0x3168daa 
8  wm_file_read_opwrap                       wm_files.c          2097 0x316c014 
9  wm_open_mainfile__open                    wm_files.c          2238 0x316c555 
10 wm_open_mainfile_exec                     wm_files.c          2273 0x316c621 
11 wm_handler_fileselect_do                  wm_event_system.c   2440 0x3160f90 
12 wm_handler_fileselect_call                wm_event_system.c   2538 0x316138d 
13 wm_handlers_do_intern                     wm_event_system.c   2926 0x3162753 
14 wm_handlers_do                            wm_event_system.c   2978 0x31628d3 
15 wm_event_do_handlers                      wm_event_system.c   3356 0x3163aa3 
16 WM_main                                   wm.c                417  0x31570cd 
17 main                                      creator.c           491  0x2b061c6
Can confirm, checking... seems another problem with the new mapping node, crashes in versioning code... ``` 1 update_mapping_node_inputs_and_properties versioning_cycles.c 802 0x2b535f5 2 do_versions_after_linking_cycles versioning_cycles.c 1096 0x2b54b73 3 do_versions_after_linking readfile.c 9493 0x2b246ab 4 blo_read_file_internal readfile.c 9799 0x2b2549d 5 BLO_read_from_file readblenentry.c 320 0x2b5dfed 6 BKE_blendfile_read blendfile.c 420 0x3e22900 7 WM_file_read wm_files.c 631 0x3168daa 8 wm_file_read_opwrap wm_files.c 2097 0x316c014 9 wm_open_mainfile__open wm_files.c 2238 0x316c555 10 wm_open_mainfile_exec wm_files.c 2273 0x316c621 11 wm_handler_fileselect_do wm_event_system.c 2440 0x3160f90 12 wm_handler_fileselect_call wm_event_system.c 2538 0x316138d 13 wm_handlers_do_intern wm_event_system.c 2926 0x3162753 14 wm_handlers_do wm_event_system.c 2978 0x31628d3 15 wm_event_do_handlers wm_event_system.c 3356 0x3163aa3 16 WM_main wm.c 417 0x31570cd 17 main creator.c 491 0x2b061c6 ```

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

@machieb You saved the file with last friday's build and Blender crashes when you open it with today's build?

@machieb You saved the file with last friday's build and Blender crashes when you open it with today's build?

This issue was referenced by 5d9c01c53f

This issue was referenced by 5d9c01c53fd58c9f5b9b9ac32995bae865448b7b

@OmarEmaraDev I saved my files with version blender-2.81-4c4a8bf588c5-windows64 I downloaded last friday. I think it is a buildbot version from thursday night. With the todays build I can´t open these files.

@OmarEmaraDev I saved my files with version blender-2.81-4c4a8bf588c5-windows64 I downloaded last friday. I think it is a buildbot version from thursday night. With the todays build I can´t open these files.
Member

@machieb Ok, thanks!

@machieb Ok, thanks!

@OmarEmaraDev : I tested a little bit and I can open my blend-file with blender-2.81-da25aca2677e-windows64. So the code that generates the error was integrated into blender after that version.

@OmarEmaraDev : I tested a little bit and I can open my blend-file with blender-2.81-da25aca2677e-windows64. So the code that generates the error was integrated into blender after that version.
Member

Looks like the file from the report was saved in (2, 80, 75), if I save it again today, we are on (2, 81, 8)

Looks like the file from the report was saved in (2, 80, 75), if I save it again today, we are on (2, 81, 8)
Member

So I guess what happens is:

  • make a file (2, 81, 8) with mapping node OR open an older file with a mapping node in (2, 81, 8), save [TexMapping struct is gone]
  • open that file in something like (2, 80, 75), save again
  • open that one in (2, 81, 8) --> crash
So I guess what happens is: - make a file (2, 81, 8) with mapping node OR open an older file with a mapping node in (2, 81, 8), save [TexMapping struct is gone] - open that file in something like (2, 80, 75), save again - open that one in (2, 81, 8) --> crash
Member

@lichtwerk I see. Do we maintain forward compatibility in Blender?

@lichtwerk I see. Do we maintain forward compatibility in Blender?
Member

I think usually TexMapping would be tagged DNA_DEPRECATED?
In this case I can still see it being used/added in node_composit_init_map_value / BKE_texture_mapping_add (for the composit MapValue node) though...

For the new Mapping Node, this clearly gets marked in red (Undefined) if opened in an older version, I guess this is fine in a way, but not sure how to handle these properly tbh, needs some futher digging...

I think usually `TexMapping` would be tagged `DNA_DEPRECATED`? In this case I can still see it being used/added in `node_composit_init_map_value` / `BKE_texture_mapping_add` (for the composit `MapValue` node) though... For the new Mapping Node, this clearly gets marked in red (`Undefined`) if opened in an older version, I guess this is fine in a way, but not sure how to handle these properly tbh, needs some futher digging...

Added subscriber: @brecht

Added subscriber: @brecht

We generally preserve some level of forward compatibility, but if you open the new mapping node in 2.80 it will definitely lead to data loss.

The same is true for many other features and we accept that. But a crash like this we can fix.

We generally preserve some level of forward compatibility, but if you open the new mapping node in 2.80 it will definitely lead to data loss. The same is true for many other features and we accept that. But a crash like this we can fix.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Philipp Oeser self-assigned this 2019-09-09 15:21:20 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69663
No description provided.